<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_common_toolbar" />

    <com.Alan.eva.ui.widget.FlexibleScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_10"
                android:text="@string/suggest_tips"
                android:textColor="@color/gray_157_157_157"
                android:textSize="@dimen/font_14" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_suggest_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10"
                android:background="@drawable/slt_edit_bg_common"
                android:gravity="top|start"
                android:hint="@string/please_input_seggestion"
                android:minLines="5"
                android:padding="@dimen/size_10"
                android:textColorHint="@color/gray_203_203_203"
                android:textSize="@dimen/font_14" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10"
                android:lineSpacingExtra="@dimen/size_5"
                android:text="@string/suggest_phone_tips"
                android:textColor="@color/gray_157_157_157"
                android:textSize="@dimen/font_14" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_suggest_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10"
                android:background="@drawable/slt_edit_bg_common"
                android:hint="@string/please_input_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="@dimen/size_10"
                android:textColorHint="@color/gray_203_203_203"
                android:textSize="@dimen/font_14" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_suggest_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginEnd="@dimen/size_10"
                android:layout_marginStart="@dimen/size_10"
                android:layout_marginTop="@dimen/size_30"
                android:background="@color/theme_color"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white" />

        </LinearLayout>
    </com.Alan.eva.ui.widget.FlexibleScrollView>
</LinearLayout>