<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar_add_create_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_color"
        android:paddingTop="@dimen/tool_bar_top_padding" />

    <com.Alan.eva.ui.widget.CircleImageView
        android:id="@+id/circle_create_new_child_portrait"
        android:layout_width="@dimen/size_80"
        android:layout_height="@dimen/size_80"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size_20"
        android:src="@mipmap/ic_flag_default_portrait" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_create_new_child_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:background="@android:color/transparent"
        android:hint="@string/pls_input_child_name_like"
        android:maxLines="1"
        android:paddingBottom="@dimen/size_15"
        android:paddingEnd="@dimen/size_20"
        android:paddingStart="@dimen/size_20"
        android:paddingTop="@dimen/size_15"
        android:textColorHint="@color/gray_203_203_203"
        android:textSize="@dimen/font_14" />

    <include layout="@layout/layout_horizontal_gray_line" />

    <RelativeLayout
        android:id="@+id/rl_create_new_child_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/size_15"
        android:paddingEnd="@dimen/size_20"
        android:paddingStart="@dimen/size_20"
        android:paddingTop="@dimen/size_15">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_gender" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_create_new_child_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/black_89_89_89"
            android:textSize="@dimen/font_14"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <include layout="@layout/layout_horizontal_gray_line" />

    <RelativeLayout
        android:id="@+id/rl_create_new_child_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/size_15"
        android:paddingEnd="@dimen/size_20"
        android:paddingStart="@dimen/size_20"
        android:paddingTop="@dimen/size_15">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_age" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_create_new_child_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="@color/black_89_89_89"
            android:textSize="@dimen/font_14"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <include layout="@layout/layout_horizontal_gray_line" />

    <RelativeLayout
        android:id="@+id/rl_create_new_child_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/size_15"
        android:paddingEnd="@dimen/size_20"
        android:paddingStart="@dimen/size_20"
        android:paddingTop="@dimen/size_15">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/child_height" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_create_new_child_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:inputType="number"
            android:textColor="@color/black_89_89_89"
            android:textSize="@dimen/font_14"
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>

    <include layout="@layout/layout_horizontal_gray_line" />

    <RelativeLayout
        android:id="@+id/rl_create_new_child_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/size_15"
        android:paddingEnd="@dimen/size_20"
        android:paddingStart="@dimen/size_20"
        android:paddingTop="@dimen/size_15">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_weight" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_create_new_child_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="@color/black_89_89_89"
            android:textSize="@dimen/font_14"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <include layout="@layout/layout_horizontal_gray_line" />

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/size_15"
    android:paddingEnd="@dimen/size_20"
    android:paddingStart="@dimen/size_20"
    android:paddingTop="@dimen/size_15">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mac_address" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_create_new_child_mac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:textColor="@color/black_89_89_89"
        android:textSize="@dimen/font_14"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>
    <include layout="@layout/layout_horizontal_gray_line" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_create_new_child_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:layout_marginEnd="@dimen/size_20"
        android:layout_marginStart="@dimen/size_20"
        android:layout_marginTop="@dimen/size_50"
        android:background="@color/theme_color"
        android:gravity="center"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>