<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/firstF" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/data_titile"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/data_img_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:padding="10dp"
            android:src="@drawable/register_back" />

        <ImageView
            android:id="@+id/data_img_flash"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:padding="10dp"
            android:src="@drawable/home_synchronize" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/data_rg_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/data_rbtn_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/data_switch_date"
                android:button="@null"
                android:gravity="center"
                android:text="@string/data_date" />

            <RadioButton
                android:id="@+id/data_rbtn_month"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/data_switch_datethree"
                android:button="@null"
                android:gravity="center"
                android:text="@string/data_month" />

            <RadioButton
                android:id="@+id/data_rbtn_year"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/data_swtich_datefour"
                android:button="@null"
                android:gravity="center"
                android:text="@string/data_year" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <FrameLayout
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp" >
             
                <com.Alan.eva.model.Axis
                    android:id="@+id/data_layout_yAxis"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:visibility="invisible"
                    >
                </com.Alan.eva.model.Axis>
            </FrameLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:scrollbars="none" >

                <LinearLayout
                    android:id="@+id/data_layout_chartLine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>