<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar_monitor_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/tool_bar_top_padding" />

    <LinearLayout
        android:id="@+id/ll_monitor_temp_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_monitor_temp_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            android:textColor="@color/white"
            android:textSize="@dimen/font_100" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="℃"
            android:textColor="@color/white"
            android:textSize="@dimen/font_20" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_monitor_temp_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_monitor_temp_holder"
        android:layout_centerHorizontal="true"
        android:text="@string/monitor_going_tips"
        android:textColor="@color/white"
        android:textSize="@dimen/font_14" />

    <LinearLayout
        android:id="@+id/ll_monitor_temp_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_40"
        android:layout_below="@+id/tv_monitor_temp_tips"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="top"
            android:gravity="center"
            android:layout_height="40dp"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:paddingRight="@dimen/size_10"
                android:gravity="center"
                android:text="@string/environment_temp"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14" />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_monitor_temp_room"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:paddingRight="@dimen/size_30"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/font_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:paddingRight="@dimen/size_10"
                android:gravity="center"
                android:text="@string/battery_power"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14" />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_monitor_temp_power"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/font_16" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/size_10"
            >

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/tv_monitor_add"
            android:layout_width="@dimen/size_120"
            android:gravity="center"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/slt_login_bg"
            android:text="@string/addmonitor"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16"
            />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/tv_monitor_his"
                android:layout_width="@dimen/size_120"
                android:gravity="center"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/slt_login_bg"
                android:text="@string/hismonitor"
                android:textColor="@color/white"
                android:textSize="@dimen/font_16" />

        </LinearLayout>
    </LinearLayout>
    <!---->
</RelativeLayout>